maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:23: error: identifier expected but integer literal found.
  val x : Int = trouveDonut()[0]
                              ^ShortestPathMaze:25: error: ']' expected but '}' found.
} 
^